feat(profile): LangChain4j Ollama LLM layer and paged dynamic profiles
Add Ollama-backed chat client and LLMService; wire LangChain4j configuration.
Support paginated listing of user profiles; extend DynamicProfileRepository and
tests.

Co-authored-by: Cursor <cursoragent@cursor.com>